# ltr_inference

./: .gitignore  Dockerfile  README.md  docker-compose.loadtest.yaml  docker-compose.yaml  locustfile.py  pyproject.toml  requirements.txt
configs/: base.yaml
demo/: app.py
docs/: ml_system_design_doc.md
locust_reports/: base.html  cpu=1,workers=4.html  cpu=4,workers=4.html  qdrant_optimization_1.html  qdrant_optimization_2.html  recsys_service_optimization_1.html  recsys_service_optimization_2.html  workers=4.html
notebooks/: 01_eda.ipynb
scripts/: data_loading.py  data_preparation.py  fill_qdrant.py  fill_redis.py  generate_embeddings.py
service/: app.py
src/: config.py  dataset.py  features.py  inference.py  retrieval.py  stores.py  train.py
