[project]
name = "ltr-inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "artem.makanov@mail.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "catboost (>=1.2.8,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
