[project]
name = "ltr-inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "artem.makanov@mail.ru"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost (>=1.2.8,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "polars (>=1.38.1,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "implicit (>=0.7.2,<0.8.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "gradio (>=6.5.1,<7.0.0)",
    "annoy (>=1.17.3,<2.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "qdrant-client==1.7.0",
    "pyarrow (>=23.0.0,<24.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "locust (>=2.43.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
